fixed #Welcome double scroll bar and positioning of .ContentContainer

--- a/_resources/_styles/base.styl
+++ b/_resources/_styles/base.styl
@@ -25,8 +25,10 @@ img {
 }
 #Welcome {
   color: #ff3431;
-  overflow: auto;
+  // overflow: auto;
   position: relative;
+  height: 100vh;
+  display: flex;
 }
 .ContentContainer {
   border: 1px solid #ff3431;
@@ -39,15 +41,14 @@ img {
 @media tablet {
   .ContentContainer {
     color: black;
-    margin: 6rem;
+    margin: 10rem 6rem 0 6rem;
     padding: 6rem;  
   }
 }
 @media laptop {
   .ContentContainer {
     max-width: 375px;
-    float: right;
-    margin: 20vh 6rem 10rem 3rem;
+    height: 57rem;
   }
 }
 .HeadingLarge {
@@ -124,7 +125,6 @@ button {
 @media laptop {
   .GalleryLg {
     width: 69%;
-    float: left;
     display: block;
   }
   .GalleryLgItem {
@@ -156,11 +156,11 @@ button {
   .GalleryLgItem5 {
     width: 21%;
     top: 46%;
-    left:41%;
+    left: 44%;
   }
   .GalleryLgItem6 {
     width: 21%;
-    top: 67%;
+    top: 71%;
     left: 13%;
   }
   .GalleryLgItem7 {
@@ -169,5 +169,3 @@ button {
     left: 25%;
   }
 }
-
-
