--- a/public/master.css
+++ b/public/master.css
@@ -519,8 +519,9 @@ img {
 }
 #Welcome {
   color: #ff3431;
-  overflow: auto;
   position: relative;
+  height: 100vh;
+  display: flex;
 }
 .ContentContainer {
   border: 1px solid #ff3431;
@@ -533,15 +534,14 @@ img {
 @media (min-width: 48em) {
   .ContentContainer {
     color: #000;
-    margin: 6rem;
+    margin: 10rem 6rem 0 6rem;
     padding: 6rem;
   }
 }
 @media (min-width: 62em) {
   .ContentContainer {
     max-width: 375px;
-    float: right;
-    margin: 20vh 6rem 10rem 3rem;
+    height: 57rem;
   }
 }
 .HeadingLarge {
@@ -615,7 +615,6 @@ button {
 @media (min-width: 62em) {
   .GalleryLg {
     width: 69%;
-    float: left;
     display: block;
   }
   .GalleryLgItem {
@@ -647,11 +646,11 @@ button {
   .GalleryLgItem5 {
     width: 21%;
     top: 46%;
-    left: 41%;
+    left: 44%;
   }
   .GalleryLgItem6 {
     width: 21%;
-    top: 67%;
+    top: 71%;
     left: 13%;
   }
   .GalleryLgItem7 {
